--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>Bill Gates</h3>
         <figure class="portret">
           <img src="img/bill.jpg" alt="Bill Gates">
-          <figcaption>Hij is een <span>Zakeman, ondernemer</span></figcaption>
+          <figcaption>Hij is een Zakeman en ondernemer</figcaption>
         </figure>
       </section>    
       </div>
@@ -29,7 +29,7 @@
         <h3>Stephen Hawking</h3>
         <figure class="portret">
           <img src="img/hawk.jpg" alt="Stephen Hawking">
-          <figcaption>Natuurkundige, kosmoloog en wiskundige</figcaption>
+          <figcaption>Hij was een Natuurkundige, kosmoloog en een wiskundige</figcaption>
         </figure>
       </section>
       </div>
@@ -39,7 +39,7 @@
         <h3>Elon Musk</h3>
         <figure class="portret">
           <img src="img/elon.jpg" alt="Elon Musk">
-          <figcaption>Ondernemer, investeerder en uitvinder</figcaption>
+          <figcaption>Hij is een Ondernemer, investeerder en uitvinder</figcaption>
         </figure>
       </section>
       </div>
@@ -49,7 +49,7 @@
         <h3>Ben Shapiro</h3>
         <figure class="portret">
           <img src="img/ben.jpg" alt="Ben Shapiro">
-          <figcaption>Conservatief politiek commetator, schrijver</figcaption>
+          <figcaption>Hij is een Conservatief politiek commetator, schrijver</figcaption>
         </figure>
       </section>
       </div>
